# hoshikage

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  INSTALL.md  LICENSE  README.md  RUST_IMPLEMENTATION.md  build.rs  deploy-production.sh  docker-compose.prod.yml  docker-compose.yml  requirements.txt  start-dev.sh
.github/workflows/: ci.yml  release.yml
data/: tags_cache.json
data/hoshikage_chroma_db/: chroma.sqlite3
docs/: CHANGELOG.md  LIBRARY_FILES.md  LIBRARY_GUIDE.md  LIBRARY_PLACEMENT.md  LIBRARY_SETUP.md  LLMファイル管理要件定義書.md  REFACTORING.md  UI設計書.md  api-spec.md  bug_report_ar_regression.md  ci-cd-pipeline.md  ci-cd-proposal.md  deploy-guide.md  nfr-details.md  requirements.md  system-design.md  user-manual.md  v1.1.0_implementation_plan.md  v1.1.0_system_design.md  引き継ぎプロンプト.md  画面モックアップ.md
docs/version_log/: v1.1.0_requirements.md
legacy_python/: Dockerfile  INSTALL.md  create-deploy-package.sh  requirements.txt
legacy_python/docs/: ollama_efficiency_comparison.md  requirements.md  system-design.md  user-manual.md  意味クラスタ要約アルゴリズム設計書（v1.0）.md  要件定義書.md
legacy_python/src/: hoshikage.py  main.py  select_sentence_representatives.py  start.sh
llama_cpp_local/lib/: libllama.so.0
models/: README.md  model_map.json  tags_ollama.json
old/: main_not_stream_v3.py  main_ollamaV6.py  main_stream_v5.py  main_stream_v7.py  main_stream_v8.py  main_v1.py  main_v2.py  main_v4.py  main_v9_chroma_shor_memory.py
scripts/: README.md  check_libs.sh
src/: __init__.py  chroma_embedding_function.py  error.rs  ffi.rs  hoshikage.py  lib.rs  main.py  main.rs  mount.py  select_sentence_representatives.py
src/api/: admin.rs  chat.rs  mod.rs  models.rs
src/commands/: add.rs  list.rs  mod.rs  rm.rs
src/config/: mod.rs  settings.rs
src/inference/: llama_wrapper.rs  loader.rs  mod.rs
src/model/: manager.rs  mod.rs
src/models/: schema.py
