[package]
name = "hoshikage"
version = "1.0.0"
edition = "2021"
description = "星影 - 高速ローカル推論サーバー (CUDA + Flash Attention + KV Cache)"
authors = ["Tane Channel Technology"]

[dependencies]
# Webサーバー
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }

# シリアライズ
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 環境変数
dotenvy = "0.15"

# ログ
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# 日時
chrono = "0.4"

# エラーハンドリング
anyhow = "1"
thiserror = "1"

# 非同期チャネル
async-trait = "0.1"

# 設定管理
dirs = "5"

# LLM推論
llama_cpp_rs = { version = "0.3.0", optional = true }

[build-dependencies]
bindgen = "0.70"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
