[package]
name = "hoshikage"
version = "1.1.0"
edition = "2021"
description = "星影 - 高速ローカル推論サーバー (CUDA + Flash Attention + KV Cache)"
authors = ["Tane Channel Technology"]

[dependencies]
# コマンドライン引数解析 (CLI用)
clap = { version = "4.5", features = ["derive", "env"] }

# Webサーバー
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }
futures-util = "0.3"
utoipa = { version = "4", features = ["axum_extras"] }

# HTTPクライアント (CLI -> Server通信用)
reqwest = { version = "0.11", features = ["json"] }

# シリアライズ
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 環境変数
dotenvy = "0.15"

# ログ
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2" # ファイル出力・ローテーション用

# ファイルロック
fs2 = "0.4"


# ユーティリティ
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dirs = "5"
async-stream = "0.3"
rand = "0.8"

# エラーハンドリング
anyhow = "1"
thiserror = "1"

# FFI / 動的ライブラリロード
libc = "0.2"
libloading = "0.8"

[build-dependencies]
bindgen = "0.69" # バージョンを安定版に指定

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
